Replace MovieEndpoints with MovieController, integrate Serilog for logging, and add cancellation token support to service methods.

--- a/MovieApi/appsettings.json
+++ b/MovieApi/appsettings.json
@@ -5,6 +5,25 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default":"Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.AspNetCore.Hosting.Diagnostics": "Error",
+        "Microsoft.Hosting.Lifetime": "Information"
+      }
+    },
+    "WriteTo": [{
+      "Name": "File",
+      "Args": {
+        "path": "logs/log.txt",
+        "rollingInterval": "Day",
+        "rollOnFileSizeLimit": true,
+        "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact"
+      }
+    }]
+  },
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=15432;Database=dotnetHero;Username=admin;Password=secret;"
