--- a/MovieApi/appsettings.json
+++ b/MovieApi/appsettings.json
@@ -1,32 +1,31 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning",
-      "Microsoft.AspNetCore.Diagnostics.ExceptionHandlerMiddleware": "None"
-    }
-  },
-  "Serilog": {
-    "MinimumLevel": {
-      "Default":"Information",
-      "Override": {
-        "Microsoft": "Warning",
-        "Microsoft.AspNetCore.Hosting.Diagnostics": "Error",
-        "Microsoft.Hosting.Lifetime": "Information"
-      }
+    "Serilog": {
+        "MinimumLevel": {
+            "Default": "Debug",
+            "Override": {
+                "Microsoft": "Information",
+                "Microsoft.AspNetCore": "Warning",
+                "Microsoft.AspNetCore.Hosting.Diagnostics": "Error",
+                "Microsoft.EntityFrameworkCore": "Warning",
+                "Microsoft.Hosting.Lifetime": "Information",
+                "System": "Information",
+                "System.Net.Http.HttpClient": "Warning"
+            }
+        },
+        "WriteTo": [
+            {
+                "Name": "File",
+                "Args": {
+                    "path": "logs/log.txt",
+                    "rollingInterval": "Day",
+                    "rollOnFileSizeLimit": true,
+                    "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact"
+                }
+            }
+        ]
     },
-    "WriteTo": [{
-      "Name": "File",
-      "Args": {
-        "path": "logs/log.txt",
-        "rollingInterval": "Day",
-        "rollOnFileSizeLimit": true,
-        "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact"
-      }
-    }]
-  },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=15432;Database=dotnetHero;Username=admin;Password=secret;"
-  }
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "DefaultConnection": "Host=localhost;Port=15432;Database=dotnetHero;Username=admin;Password=secret;"
+    }
 }
