Add configurable pagination support: introduce PaginationOptions, update MoviesController and MovieService to use bound configuration and refactor related logic.

--- a/MovieApi/appsettings.json
+++ b/MovieApi/appsettings.json
@@ -12,6 +12,11 @@
                 "System.Net.Http.HttpClient": "Warning"
             }
         },
+        "Pagination": {
+            "Page": 0,
+            "PageSize": 10,
+            "MaxPageSize": 100
+        },
         "WriteTo": [
             {
                 "Name": "File",
