Refactor PaginationOptions: move configuration from appsettings.json, update default values, and adjust validation attributes.

--- a/MovieApi/appsettings.json
+++ b/MovieApi/appsettings.json
@@ -12,11 +12,6 @@
                 "System.Net.Http.HttpClient": "Warning"
             }
         },
-        "Pagination": {
-            "Page": 0,
-            "PageSize": 10,
-            "MaxPageSize": 100
-        },
         "WriteTo": [
             {
                 "Name": "File",
@@ -28,6 +23,11 @@
                 }
             }
         ]
+    },
+    "PaginationOptions": {
+        "Page": 1,
+        "PageSize": 10,
+        "MaxPageSize": 100
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
