--- a/MovieApi/appsettings.json
+++ b/MovieApi/appsettings.json
@@ -30,6 +30,12 @@
         "MaxPageSize": 100
     },
     "AllowedHosts": "*",
+    "JWT": {
+        "key": "C1CF4B7DC4C4175B6618DE4F55CA4",
+        "Issuer": "SecureApi",
+        "Audience": "SecureApiUser",
+        "DurationInMinutes": 60
+    },
     "ConnectionStrings": {
         "DefaultConnection": "Host=localhost;Port=15432;Database=dotnetHero;Username=admin;Password=secret;"
     }
