Add JWT token generation support: implement GetTokenAsync in UsersService, introduce TokenRequestModel and AuthenticationModel, and update UsersController with token endpoint.

--- a/MovieApi/appsettings.json
+++ b/MovieApi/appsettings.json
@@ -31,7 +31,7 @@
     },
     "AllowedHosts": "*",
     "JWT": {
-        "key": "C1CF4B7DC4C4175B6618DE4F55CA4",
+        "key": "u1K!8pGQY7sK3xM9dV2tR4bC6fH8jL0z\n",
         "Issuer": "SecureApi",
         "Audience": "SecureApiUser",
         "DurationInMinutes": 60
