--- a/MovieApi/appsettings.json
+++ b/MovieApi/appsettings.json
@@ -31,7 +31,7 @@
     },
     "AllowedHosts": "*",
     "JWT": {
-        "key": "u1K!8pGQY7sK3xM9dV2tR4bC6fH8jL0z\n",
+        "key": "u1K!8pGQY7sK3xM9dV2tR4bC6fH8jL0z",
         "Issuer": "SecureApi",
         "Audience": "SecureApiUser",
         "DurationInMinutes": 60
