Refactor token handling in TokensController: replace magic constants with JWT settings, inject JWT options, and adjust service calls for consistency. Add `DurationInDays` to JWT settings.

--- a/MovieApi/appsettings.json
+++ b/MovieApi/appsettings.json
@@ -34,7 +34,8 @@
         "key": "u1K!8pGQY7sK3xM9dV2tR4bC6fH8jL0z",
         "Issuer": "SecureApi",
         "Audience": "SecureApiUser",
-        "DurationInMinutes": 1
+        "DurationInMinutes": 10,
+        "DurationInDays": 10
     },
     "ConnectionStrings": {
         "DefaultConnection": "Host=localhost;Port=15432;Database=dotnetHero;Username=admin;Password=secret;"
