Clear sensitive data from default connection string in appsettings.json.

--- a/MovieApi/appsettings.json
+++ b/MovieApi/appsettings.json
@@ -38,6 +38,6 @@
         "DurationInDays": 10
     },
     "ConnectionStrings": {
-        "DefaultConnection": "Host=localhost;Port=5432;Database=dotnetHero;Username=admin;Password=;"
+        "DefaultConnection": ""
     }
 }
