--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   postgres:
-    image: postgres
+    image: postgres:17-alpine
     container_name: postgres-dotnetHero
     restart: always
     environment:
@@ -8,9 +8,14 @@ services:
       POSTGRES_PASSWORD: ${DB__PASSWORD}
       POSTGRES_DB: dotnetHero
     ports:
-      - "${PORT}:5432"
+      - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    healthcheck:
+        test: ["CMD-SHELL", "pg_isready -U admin -d dotnetHero"]
+        interval: 10s
+        timeout: 5s
+        retries: 5
 
 volumes:
   postgres_data:
