--- a/MovieApi/appsettings.json
+++ b/MovieApi/appsettings.json
@@ -38,7 +38,6 @@
         "DurationInDays": 10
     },
     "ConnectionStrings": {
-        "DefaultConnection": ""
-
+        "DefaultConnection": "Host=localhost;Port=5432;Database=movieApiDb;Username=admin;Password=secret;"
     }
 }
